# advent-of-code

./: .flake8  LICENSE  README.md  pyproject.toml
.github/: codecov.yml
.github/workflows/: ci.yml
src/aoc/year_2022/: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
tests/: utils.py
tests/aoc/: test_2022.py
